@@ -1,9 +1,2 @@
-JavaFx application
-
-Structure:
-- tecajnica/  -> JavaFX application (Maven)
-
-Instructions:
-1) mvn clean package
-2) java --module-path target/libs --add-modules javafx.controls,javafx.fxml -jar target/fx-exchange-rate-1.0-SNAPSHOT.jar
+Currency Rate Application
 
